the_project/gke/manifests/patch-add-db-subpath.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  template:
    spec:
      containers:
        - name: postgres
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /data
              subPath: data
