the_project/gke/manifests/patch-add-img-subpath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  template:
    spec:
      containers:
        - name: todo-app
          volumeMounts:
            - name: img-cache
              mountPath: /tmp/img-cache
              subPath: images
