the_project/gke/manifests/patch-remove-db-storageclass.yaml
apiVersion: v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: null
        resources:
          requests:
            storage: 100Mi
