the_project/gke/manifests/patch-change-service-port-to-80.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
    - $patch: replace
